# FactoryBench_Generation

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt
data/labelling/: dataset.json  events.json  grippers.json  machines.json  tasks.json
data/mappings_of_features/: aursad.json  vorausad.json
data/mc_options/: mc_options.json
scripts/: install_data.sh  qa_review_app.py  sample_qa_for_review.py  score_replies_batch.py  split_qa_train_val_test.py  test_foundry.py
sims/: events.json
sims/counterfactual/: __init__.py  episode_state.py  runner.py
sims/event_injection/: __init__.py  context.py  scheduler.py
sims/pick_and_place/: base_runner.py  sweep_events.py  sweep_mass_friction.py
sims/screwing/: base_runner.py  episode_logger.py
src/: __init__.py  config.py
src/data/: _decimation.py  analyze_fault_id_errors.py  factorywave_kuka_normalizer.py  factorywave_normalizer.py  fix_cf_fault23_to_12_largebox.py  fix_factorywave_fault_ids.py  kuka_real_normalizer.py  precompute_cf_selection.py  simulations_normalizer.py  ur3_real_normalizer.py  ur3e_normalizer.py
src/evaluation/: analyze_questions.py  analyze_results.py  aws-setup.md  chance_correct.py  opik_logging.py  per_template_scores.py  plot_benchmark.py  plot_results.py  rescore_results.py  retag_replies.py  run_aws_eval.py  run_direct_eval.py  run_foundry_eval.py  score_level4_rubric.py  simple_baselines.py
src/pipeline/: README.md  run_pipeline.py  upload_qa_pairs.py
src/question_generation/: __init__.py  build_prompts_from_questions.py  cli.py  noise_qa_pairs.py
(+83 files in other folders)
